Remove unused methods and imports.
Eliminated the `getDescription` and `getNameEn` methods from `DailyMenu` and removed unused imports across several classes. Also refined the `currencyFormatter` initialization and added an annotation to suppress warnings in `DailyMenuMessageBuilder`. These changes optimize the code by removing redundancy and improving maintainability.